[package]
name = "reapack-indexer-4"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
pandoc = "0.8.11"
rust-ini = "0.21.0"
thiserror = "1.0.61"
inquire = "0.7.5"
walkdir = "2.5.0"
xml-builder = "0.5.2"
relative-path = "1.9.3"
