[package]
name = "reapack-indexer-4"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
pandoc = "0.8.11"
rust-ini = "0.21.0"
thiserror = "1.0.61"
inquire = "0.7.5"
walkdir = "2.5.0"
xml-builder = "0.5.2"
relative-path = { version = "1.9.3", features = ["serde"] }
itertools = "0.13.0"
regex = "1.10.5"
sanitize-filename = "0.5.0"
leon = "3.0.1"
once_cell = "1.19.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4.14"
